@@ -71,6 +71,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-562 HCatClient should allow for a table's message-topic-name to be queried for. (mithunr via avandana)
+
   HCAT-561 HCatClient should differentiate between "partition not available" and other generic errors. (mithun via avandana)
 
   HCAT-534 HCat_Drop_Table_3 dfs mkdir failing on hadoop23 (cdrome via toffer)
